# vibe-tracker

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  compose.yml  pyproject.toml
.github/workflows/: test.yml
app/: main.py
app/api/v1/: comments.py  metrics.py  tickets.py
app/core/: config.py
app/db/: session.py
app/db/models/: __init__.py  comment.py  ticket.py
app/schemas/: comment.py  metric.py  ticket.py
docs/: specification.md
docs/domains/: 1-tickets.md  2-comments.md  3-metrics.md
docs/reports/: initial-implementation.md
tests/: conftest.py  factories.py  test_comments.py  test_metrics.py  test_tickets.py
